dnl Process this file with autoconf to produce a configure script. -*-m4-*-
AC_INIT(cppi.l)
AM_CONFIG_HEADER(config.h)
AC_PREREQ(2.12)dnl               dnl Minimum Autoconf version required.

AM_INIT_AUTOMAKE([cppi], [1.0a])
GNU_PACKAGE="GNU $PACKAGE"
AC_DEFINE_UNQUOTED(GNU_PACKAGE, "$GNU_PACKAGE")

dnl Checks for programs.

AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
AC_PROG_RANLIB
AC_PROG_LEX
AC_AIX
AC_MINIX

AC_DECL_YYTEXT

dnl Checks for header files.
AC_CHECK_HEADERS(stdlib.h string.h)
AC_HEADER_STDC

dnl This test must precede tests of compiler characteristics like
dnl that for the inline keyword, since it may change the degree to
dnl which the compiler supports such features.
AM_C_PROTOTYPES

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

dnl This test replaces the obsolescent AC_ISC_POSIX kludge.
AC_CHECK_LIB(cposix, strerror, [LIBS="$LIBS -lcposix"])

dnl Checks for library functions.
AC_CHECK_FUNCS(strerror)
AC_FUNC_ALLOCA

AC_OUTPUT([Makefile tests/Makefile])
